--- a/bruceHome.css
+++ b/bruceHome.css
@@ -8,7 +8,7 @@ body {
 }
 
 .bNav {
-	height: 100px;
+	height: 120px;
 }
 
 .navbar-brand {
@@ -16,7 +16,7 @@ body {
 }
 
 .navbar-brand img {
-	width: 200px;
+	width: 240px;
 	height: auto;
 }
 
@@ -47,6 +47,41 @@ body {
 .current h4 {
 	color: white;
 }
+
+.body {
+	font-family: Serif;
+	color: white;
+}
+
+.title {
+	text-align: center;
+}
+
+.menu {
+	color: tan;
+	text-decoration: underline;
+}
+
+a:hover {
+	text-decoration: none;
+	color: white;
+	font-size: 15px;
+}
+
+.sideMenu {
+	position: absolute;
+	right: 10px;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
